4: update the domain-model