@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.7</version>
+        <version>4.0.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.github.stueberm1.riskmanager</groupId>
@@ -41,9 +41,10 @@
         <url>https://github.com/stueberm1/riskmanager</url>
     </scm>
     <properties>
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
         <arch-unit.version>1.4.1</arch-unit.version>
+        <asciidoctorj.version>3.0.1</asciidoctorj.version>
     </properties>
     <modules>
         <module>risk-manager-types</module>
@@ -51,39 +52,6 @@
         <module>risk-manager-main</module>
     </modules>
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.12.0</version>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
-                        <docletArtifact>
-                            <groupId>org.asciidoctor</groupId>
-                            <artifactId>asciidoclet</artifactId>
-                            <version>2.0.0</version>
-                        </docletArtifact>
-                        <overview>src/main/java/overview.adoc</overview>
-                        <additionalparam>
-                            --base-dir ${project.basedir}
-                            --attribute "name=${project.name}"
-                            --attribute "version=${project.version}"
-                        </additionalparam>
-                        <additionalJOptions>
-                            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
-                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
-                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
-                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
-                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
-                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
-                            <additionalJOption>-Xdoclint:all,-html,-accessibility,-missing</additionalJOption>
-                        </additionalJOptions>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -123,6 +91,11 @@
                 <groupId>com.tngtech.archunit</groupId>
                 <artifactId>archunit-junit5</artifactId>
                 <version>${arch-unit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctorj</artifactId>
+                <version>${asciidoctorj.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
